--- a/app/src/main/res/layout/activity_edit_class.xml
+++ b/app/src/main/res/layout/activity_edit_class.xml
@@ -152,11 +152,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:clickable="false"
+        android:editable="false"
         android:ems="10"
         android:hint="@string/name"
         android:inputType="textPersonName"
