--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".AddTask">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/basic_toolbar"
+        style="@style/HeaderBar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline14"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />
+
     <EditText
         android:id="@+id/taskNameEditText"
         android:layout_width="0dp"
